<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/stone"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">


    <TextView
            android:text="@string/screen_login1"
            android:textSize="@dimen/screen_login_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintVertical_bias="0.253"/>
    <EditText
            android:hint="@string/screen_user"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_width="@dimen/screen_user_lock_button_login1_width"
            android:textSize="@dimen/screen_user_password_size"
            android:layout_height="@dimen/screen_user_password_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintVertical_bias="0.467"/>
    <ImageView
            android:layout_width="@dimen/user_lock_width_height"
            android:layout_height="@dimen/user_lock_width_height"
            app:srcCompat="@mipmap/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintVertical_bias="0.467"/>
    <EditText
            android:hint="@string/screen_password"
            android:layout_width="@dimen/screen_user_lock_button_login1_width"
            android:textColor="@color/white"
            android:layout_height="@dimen/screen_user_password_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/screen_user_password_size"
            android:gravity="center_horizontal"
            android:id="@+id/textView8"
            app:layout_constraintVertical_bias="0.574"/>
    <ImageView
            android:layout_width="@dimen/user_lock_width_height"
            android:layout_height="@dimen/user_lock_width_height"
            app:srcCompat="@mipmap/lock"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintVertical_bias="0.573"/>
    <Button
            android:text="@string/button_login1"
            android:textAllCaps="false"
            android:textSize="@dimen/button_login1_size"
            android:textColor="@color/white"
            android:layout_width="@dimen/screen_user_lock_button_login1_width"
            android:layout_height="@dimen/button_login1_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button3"
            android:background="@drawable/button_login"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.754"/>
    <TextView
            android:text="@string/screen_sign_up"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.394"
            app:layout_constraintVertical_bias="0.834"/>
    <Button
            android:text="@string/button_sign_up"
            android:textColor="@color/sapphire"
            android:layout_width="@dimen/button_sign_up_width"
            android:background="@color/clear"
            android:layout_height="19dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button4"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintVertical_bias="0.834" android:onClick="Activity2"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:background="@color/clear"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintVertical_bias="0.059" android:onClick="Activity2"/>


</androidx.constraintlayout.widget.ConstraintLayout>