<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        tools:context=".MainActivity">


    <TextView
            android:text="@string/screen_create"
            android:layout_width="@dimen/screen_create_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView"
            android:textSize="@dimen/screen_create_size"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.151"/>
    <TextView
            android:text=""
            android:background="@drawable/background"
            android:layout_width="@dimen/background1_width"
            android:layout_height="@dimen/background1_height"
            android:id="@+id/textView3"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintVertical_bias="0.362"/>
    <EditText
            android:layout_width="@dimen/first_last_width"
            android:layout_height="@dimen/first_last_height"
            android:hint="@string/screen_first_name"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintVertical_bias="0.328"/>
    <EditText
            android:hint="@string/screen_last_name"
            android:layout_width="@dimen/first_last_width"
            android:layout_height="@dimen/first_last_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintVertical_bias="0.428"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/background"
            android:id="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintVertical_bias="0.366"/>
    <TextView
            android:text="@string/screen_photo"
            android:layout_width="@dimen/screen_photo_width"
            android:gravity="center"
            android:textSize="@dimen/screen_photo_size"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintVertical_bias="0.437"/>
    <TextView
            android:layout_width="@dimen/background2_width"
            android:layout_height="@dimen/background2_height"
            android:background="@drawable/background"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintVertical_bias="0.532"/>
    <TextView
            android:layout_width="@dimen/background2_width"
            android:layout_height="@dimen/background2_height"
            android:background="@drawable/background"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintVertical_bias="0.646"/>
    <TextView
            android:layout_width="@dimen/background2_width"
            android:layout_height="@dimen/background2_height"
            android:background="@drawable/background"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintVertical_bias="0.769"/>
    <EditText
            android:layout_width="@dimen/sign_up_width"
            android:layout_height="@dimen/sign_up_height"
            android:hint="@string/screen_confirm_password"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.751"
            app:layout_constraintVertical_bias="0.769"/>
    <ImageView
            android:layout_width="@dimen/image_width_height"
            android:layout_height="@dimen/image_width_height"
            app:srcCompat="@mipmap/lock1"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintVertical_bias="0.775"/>
    <EditText
            android:layout_width="@dimen/sign_up_width"
            android:layout_height="@dimen/sign_up_height"
            android:hint="@string/screen_password"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.751"
            app:layout_constraintVertical_bias="0.646"/>
    <EditText
            android:layout_width="@dimen/sign_up_width"
            android:layout_height="@dimen/sign_up_height"
            android:inputType="textEmailAddress"
            android:hint="@string/screen_email"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editText6"
            app:layout_constraintHorizontal_bias="0.744"
            app:layout_constraintVertical_bias="0.532"/>
    <ImageView
            android:layout_width="@dimen/image_width_height"
            android:layout_height="@dimen/image_width_height"
            app:srcCompat="@mipmap/lock1"
            android:id="@+id/imageView1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintVertical_bias="0.65"/>
    <ImageView
            android:layout_width="@dimen/image_width_height"
            android:layout_height="@dimen/image_width_height"
            app:srcCompat="@mipmap/email"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintVertical_bias="0.533"/>
    <Button
            android:text="@string/button_create"
            android:layout_width="@dimen/button_create_width"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:background="@drawable/background2"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintVertical_bias="0.881"/>
    <TextView
            android:text="@string/screen_login"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintVertical_bias="0.985"/>
    <Button
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:textSize="@dimen/button_login_size"
            android:textAllCaps="false"
            android:layout_width="@dimen/button_login_width"
            android:background="@color/clear"
            android:layout_height="@dimen/button_login_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button2"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintVertical_bias="0.998"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="Activity1"/>


</androidx.constraintlayout.widget.ConstraintLayout>